Resolved 25 FindBug reports
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base@5336 7c7dc5f5-a22d-0410-a3af-b41755a11667